# afr-example-wifi-scan

./: .project  CMakeLists.txt  Makefile  README.md  afr.mk  main.c
.mtbLaunchConfigs/: afr-example-wifi-scan Attach (JLink).launch  afr-example-wifi-scan Attach (KitProg3).launch  afr-example-wifi-scan Debug (JLink).launch  afr-example-wifi-scan Debug (KitProg3).launch  afr-example-wifi-scan Erase (JLink).launch  afr-example-wifi-scan Erase (KitProg3).launch  afr-example-wifi-scan Program (JLink).launch  afr-example-wifi-scan Program (KitProg3).launch
make_support/: afr.mk  mtb_cypress_source.mk  mtb_feature_ota.mk
source/: wifi_scan.c
